RESOLVED FIXED87562
[BlackBerry] Web page fails to render after clicking link with target=_blank
https://bugs.webkit.org/show_bug.cgi?id=87562
Summary [BlackBerry] Web page fails to render after clicking link with target=_blank
Arvid Nilsson
Reported 2012-05-25 22:05:22 PDT
Clicking such a link opens a new tab. The compositor was briefly in charge of drawing the root layer while the backing store was inactive and the user was looking at the other tab. The problem was that the compositor believed it was still painting the root layer even after the backing store became active again. The flag was not properly cleared when turning off compositing. Fixed by returning false from drawsRootLayer() if we don't have a root layer. Reviewed internally by Filip Spacek.
Attachments
Patch (2.04 KB, patch)
2012-05-27 05:37 PDT, Arvid Nilsson
no flags
Arvid Nilsson
Comment 1 2012-05-27 05:37:58 PDT
WebKit Review Bot
Comment 2 2012-05-27 07:18:16 PDT
Comment on attachment 144225 [details] Patch Clearing flags on attachment: 144225 Committed r118625: <http://trac.webkit.org/changeset/118625>
WebKit Review Bot
Comment 3 2012-05-27 07:18:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.